name:                helojito
version:             0.2
synopsis:            A CLI Tool for Relojito
description:         A CLI Tool for Relojito
license:             MIT
license-file:        LICENSE
author:              Ezequiel Alvarez
maintainer:          ealvarez@msa.com.ar
copyright:           MSA S.A.
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  ghc-options:         -Wall -threaded -rtsopts
  exposed-modules:     Web.Helojito
  other-modules:       Web.Helojito.Types
                     , Web.Helojito.Client
                     , Web.Helojito.Task
                     , Web.Helojito.Project
                     , Web.Helojito.Util
                     , Web.Helojito.Endpoint
  hs-source-dirs:      src
  build-depends:       aeson        >= 0.8
                     , attoparsec   >= 0.12
                     , base         >= 4.7 && <5
                     , bytestring   >= 0.10
                     , either       >= 4.3
                     , text         >= 1.2
                     , time         >= 1.4
                     , transformers >= 0.3
                     , wreq         >= 0.2
                     , lens         >= 4.4
                     , http-client  >= 0.4
                     , safe         >= 0.3
  default-language:    Haskell2010

executable helojito
  main-is:             Main.hs
  hs-source-dirs:      src
  -- other-modules:       
  -- other-extensions:    
  ghc-options:         -Wall -O2  -threaded -rtsopts
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && <5
                     , directory    >= 1.0
                     , optparse-applicative >= 0.10
                     , HsOpenSSL    >= 0.10
                     , aeson        >= 0.8
                     , attoparsec   >= 0.12
                     , bytestring   >= 0.10
                     , either       >= 4.3
                     , text         >= 1.2
                     , time         >= 1.4
                     , transformers >= 0.3
                     , wreq         >= 0.2
                     , lens         >= 4.4
                     , http-client  >= 0.4
                     , pretty       >= 1.0
                     , safe         >= 0.3
                     , helojito
