name:                helojito
version:             0.3
synopsis:            A CLI Tool for Relojito
description:         A CLI Tool for Relojito
license:             MIT
license-file:        LICENSE
author:              Ezequiel Alvarez
maintainer:          ealvarez@msa.com.ar
copyright:           MSA S.A.
category:            Web
build-type:          Simple
cabal-version:       >=1.10


library
  ghc-options:         -Wall -O2 -threaded
  --ld-options:          -static -pthread
  exposed-modules:     Web.Helojito
  other-modules:       Web.Helojito.Types
                     , Web.Helojito.Client
                     , Web.Helojito.Task
                     , Web.Helojito.TaskType
                     , Web.Helojito.Project
                     , Web.Helojito.Util
                     , Web.Helojito.Endpoint
                     , Web.Helojito.Concurrent
  hs-source-dirs:      src
  default-language:    Haskell2010
  build-depends:       aeson
                     , attoparsec
                     , base
                     , bytestring
                     , either
                     , text
                     , transformers
                     , wreq
                     , lens
                     , http-client
                     , lifted-async
                     , lifted-base
                     , stm
                     , free
                     , monad-control
                     , transformers-base

executable helojito
  main-is:             Main.hs
  hs-source-dirs:      src-main
  ghc-options:         -Wall -O2 -threaded
  --ld-options:          -static -pthread
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && <5
                     , directory
                     , optparse-applicative
                     , aeson
                     , bytestring
                     , text
                     , time
                     , old-locale
                     , MissingH
                     , pretty
                     , boxes
                     , network
                     , gitlib
                     , gitlib-libgit2
                     , shelly
                     , helojito
